lib update to eliminate a CVE